.metals/metals.log
2023.04.20 13:22:30 INFO  Started: Metals version 0.11.11 in workspace '/workspaces/demo' for client Visual Studio Code 1.77.3.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/codespace/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.04.20 13:22:31 INFO  time: initialize in 0.74s
2023.04.20 13:22:34 WARN  Build server is not auto-connectable.
2023.04.20 13:22:34 WARN  no build tool detected in workspace '/workspaces/demo'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
Apr 20, 2023 1:22:39 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:23:40 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:24:24 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:24:26 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:24:27 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:24:29 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:25:05 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Apr 20, 2023 1:27:19 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.04.20 13:32:10 WARN  no build target for: /workspaces/demo/demo/src/main/java/com/example/demo/DemoApplication.java
Apr 20, 2023 1:32:11 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 11
2023.04.20 13:32:13 INFO  time: code lens generation in 1.8s
2023.04.20 13:32:13 INFO  time: code lens generation in 1.73s
Apr 20, 2023 1:35:08 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 23
Apr 20, 2023 1:35:23 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 25
Apr 20, 2023 1:35:32 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.04.20 13:35:57 WARN  no build target for: /workspaces/demo/demo/src/main/java/com/example/demo/Services/UserService.java
2023.04.20 13:35:59 WARN  Running javac-semanticdb failed for file:///workspaces/demo/demo/src/main/java/com/example/demo/Services/UserService.java. Output:
/workspaces/demo/demo/src/main/java/com/example/demo/Services/UserService.java:34: error: <identifier> expected
        Optional<users> optionalUser = userRepository.
                                                      ^
1 error
2023.04.20 13:35:59 INFO  time: code lens generation in 1.34s
2023.04.20 13:36:03 WARN  no build target for: /workspaces/demo/demo/src/main/java/com/example/demo/R.java
